<resources>
    <string name="app_name">IRS Portugal</string>
    <string name="simulador_financas_bem_vindo">Calcule seu salário líquido em Portugal. %1$s%2$s  \nBem vindo!</string>
    <string name="proximo">Próximo</string>
    <string name="dois_titulares">Dois titulares: %1$s</string>
    <string name="renda_liquida">Salário Líquido: € %1$s</string>
    <string name="renda_ate">Salário bruto até: € %1$s</string>
    <string name="qtde_filhos">Quantidade de filhos: %1$s</string>
    <string name="casado">Casado: %1$s</string>
    <string name="deficiencia">Possui alguma deficiência: %1$s</string>
    <string name="imposto">Imposto: %1$s</string>
    <string name="informe_sua_renda">Informe o salário bruto</string>
    <string name="aplicar_filtro">Aplicar Filtro</string>
    <string name="eh_casado">É Casado?</string>
    <string name="dois_titulares_">Dois titulares</string>
    <string name="filtro_qtde_filhos">Quantidade de filhos</string>
    <string name="possui_deficiente">Possui deficiência</string>
    <string name="ok">OK</string>
    <string name="remover_filtros">Remover Filtros</string>
    <string name="tax_table">Tabela de impostos</string>
    <string name="filtros">Filtros</string>
    <string name="zero">0</string>
    <string name="check_privacy_policy">Consulte a política de privacidade</string>
    <string name="privacy_policy_url" translatable="false">https://irsportugal.blogspot.com/2022/06/irs-portugal.html</string>
</resources>