<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="tax"
            type="br.com.raynerweb.portugal.financas.ui.model.Tax" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_renda_liquida"
            style="?attr/textAppearanceHeadline5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@{tax.rendaLiquida}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/renda_liquida" />

        <TextView
            android:id="@+id/tv_renda_ate"
            style="?attr/textAppearanceBody2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@{tax.rendaLimite}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_renda_liquida"
            tools:text="@string/renda_ate" />

        <TextView
            android:id="@+id/tv_qtdeFilhos"
            style="?attr/textAppearanceBody2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@{tax.qtdeFilhos}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_renda_ate"
            tools:text="@string/qtde_filhos" />

        <TextView
            android:id="@+id/tv_casado"
            style="?attr/textAppearanceBody2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@{tax.casado}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_qtdeFilhos"
            tools:text="@string/casado" />

        <TextView
            android:id="@+id/tv_deficiente"
            style="?attr/textAppearanceBody2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@{tax.deficiente}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_casado"
            tools:text="@string/deficiencia" />

        <TextView
            android:id="@+id/tv_porcentagem_imposto"
            style="?attr/textAppearanceBody2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@{tax.porcentagemImposto}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_deficiente"
            tools:text="@string/imposto" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_light"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>